# LidarCamCal

./: CMakeLists.txt
data/: topa.pcd  topb.pcd
data/20191223/camlidcal/process/: 11.pcd  12.pcd  13.pcd  14.pcd  21.pcd  22.pcd  23.pcd  24.pcd  31.pcd  32.pcd  33.pcd  34.pcd  boundary1.pcd  boundary2.pcd  boundary3.pcd  coarsePlane1.pcd  coarsePlane2.pcd  coarsePlane3.pcd  finePlane1.pcd  finePlane2.pcd  finePlane3.pcd  result.txt  resultCanUse.txt  resultFinal.txt  resultLineLC.txt
include/: cam.h  lidar.h  pickArea.h  utils.h
python/: error.py  main.py  showResult.py  utils.py
src/: cam.cpp  lidar.cpp  main.cpp  pickArea.cpp  utils.cpp
